Omnibox: Change results popup shadow color for incognito.

Previously, the results popup shadow color was kGoogleGrey800 (#3C4043) for both
incognito and normal windows. This shadow was difficult to detect on incognito's
dark new tab page. This changes the shadow color for incognito windows to black
(#000). This change only affects material refresh.

The results popup uses BubbleBorder to draw its border, including its shadow.
BubbleBorder can be provided a shadow elevation to determine the size of its
shadow, or else it will provide a default shadow. Additionally, BubbleBorder
shadows consider the material refresh flag. Elevated refresh shadows (e.g.
refresh flag is on and elevation is 3 or 16) are delegated to
ShadowValue::MakeRefreshShadowValues. Elevated non-refresh shadows (e.g. refresh
flag is off or elevation is neither 3 nor 16) are delegated to
ShadowValue::MakeMdShadowValues. Un-elevated shadows are constructed inline
within BubbleBorder::GetShadowValues.

Previously, ShadowValue::MakeRefreshShadowValues shadows were kGoogleGrey800,
while ShadowValue::MakeMdShadowValues and BubbleBorder::GetShadowValues shadows
were SK_ColorBLACK. This cl adds the ability to set custom shadow colors for all
3 shadow constructions. If no color is set, SK_ColorBLACK is used by default,
this is consistent with all current usages of ShadowValue and BubbleBorder.

Bug: 866054
Change-Id: I6d592f290daf41a6a083e7e6214c0a30dfdfb68f
Reviewed-on: https://chromium-review.googlesource.com/1165794
Commit-Queue: manuk hovanesian <manukh@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581895}
Former-commit-id: 65ac8cbbdefe065f651a9a832f011c7f8eed709a